# Tour-Guidance

./: README.md  config.example.yaml  pyproject.toml  server.py
static/: scripts.js  style.css
templates/: index.html
